<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keliling_persegi_panjang"
        android:textColor="#9575CD"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <EditText
        android:id="@+id/panjang"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="0"
        android:hint="@string/input_panjang"
        android:inputType="number|numberDecimal"
        android:textColorHint="#78909C"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lebar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_judul" />

    <EditText
        android:id="@+id/lebar"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints="0"
        android:hint="@string/input_lebar"
        android:inputType="number|numberDecimal"
        android:textColorHint="#78909C"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panjang" />

    <Button
        android:id="@+id/btn_hitung"
        android:layout_width="168dp"
        android:layout_height="60dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="20dp"
        android:text="@string/hitung"
        app:layout_constraintBottom_toTopOf="@+id/keliling"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_clear" />

    <EditText
        android:id="@+id/keliling"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="496dp"
        android:autofillHints="0"
        android:enabled="false"
        android:hint="@string/keliling"
        android:inputType="number|numberDecimal"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="123dp"
        android:layout_height="59dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="20dp"
        android:onClick="hapus"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/keliling"
        app:layout_constraintEnd_toStartOf="@+id/btn_hitung"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>